image box & footer section

--- a/index.html
+++ b/index.html
@@ -20,26 +20,9 @@
   </head>
   <body>
 
-	<header>
-	 <!--  <div class="collapse bg-dark" id="navbarHeader">
-	    <div class="container">
-	      <div class="row">
-	        <div class="col-sm-8 col-md-7 py-4">
-	          <h4 class="text-white">About</h4>
-	          <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
-	        </div>
-	        <div class="col-sm-4 offset-md-1 py-4">
-	          <h4 class="text-white">Contact</h4>
-	          <ul class="list-unstyled">
-	            <li><a href="#" class="text-white">Follow on Twitter</a></li>
-	            <li><a href="#" class="text-white">Like on Facebook</a></li>
-	            <li><a href="#" class="text-white">Email me</a></li>
-	          </ul>
-	        </div>
-	      </div>
-	    </div>
-	  </div>
- -->  <div class="navbar navbar-dark bg-dark shadow-sm">
+	<!-- <header>
+	
+ <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container d-flex justify-content-between">
       <a href="#" class="navbar-brand d-flex align-items-center">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="mr-2" viewBox="0 0 24 24" focusable="false"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
@@ -54,7 +37,34 @@
       </button>
     </div>
   </div>
-</header>
+</header> -->
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-light">
+  <a class="navbar-brand" href="#">Navbar w/ text</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav ml-auto  ">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Pricing</a>
+      </li>
+    </ul>
+    <!-- <span class="navbar-text">
+      Navbar text with an inline element
+    </span> -->
+  </div>
+  <!-- <ul class="nav navbar-nav navbar-right">
+    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+  </ul> -->
+</nav>
 
 	<!-- <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 	  <h1 class="display-4">Pricing</h1>
@@ -114,39 +124,45 @@
 
 <div class="container" style="padding-top:40px ;">
   	<div class="row">
-  		<div class="card" style="width: 18rem;">
+      <div class="col-md-4">
+  		<div class="card" style="width: 381px;height: 412;margin: 15px;">
 		  <img class="card-img-top" src="./image/video-1.png" alt="Card image cap">
 		  <div class="card-body">
-		   <p>Go<span style="color:red;"> somewhere</span></p>
-		  </div>
-		</div>
-		<div class="card" style="width: 18rem;">
+		   <p class="whitetext">Project Title<span class="redtext"> Goes Here </span></p>
+      </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+		<div class="card" style="width: 381px;height: 412;margin: 15px;">
 		  <img class="card-img-top" src="./image/video-2.png" alt="Card image cap">
 		  <div class="card-body">
-		   <p>Go<span style="color:red;"> somewhere</span></p>
+		   <p class="whitetext">Project Title<span class="redtext"> Goes Here </span></p>
 		  </div>
-		</div>
-		<div class="card" style="width: 18rem;">
+    </div>
+  </div>
+  <div class="col-md-4">
+		<div class="card" style="width: 381px;height: 412;margin: 15px;">
 		  <img class="card-img-top" src="./image/video-3.png" alt="Card image cap">
 		  <div class="card-body">
-		   <p>Go<span style="color:red;"> somewhere</span></p>
+		   <p class="whitetext">Project Title<span class="redtext"> Goes Here </span></p>
 		  </div>
-		</div>
+    </div>
+  </div>
  </div>
 </div> <!-- Container End -->
 
 <div class="container " style="padding-top:40px ;"> <!-- Container Start -->
   <div class="row text-center">
-    <div class="col-md-2"></div>
+    <!-- <div class="col-md-2"></div> -->
       
-    <div class="col-md-4 " style="margin-right: 5px;">
-      <img src="./image/about.png" class="img-rounded" alt="" width="350" height="auto">
+    <div class="col-md-4 " style="margin-right: 185px;">
+      <img src="./image/img-5.png" class="img-rounded" alt="" width="505" height="321px">
     </div>
       
-      <div class="col-md-4 " style="padding-left: 5px;margin-top: 20px;">
-      <img src="./image/about.png" class="img-rounded" alt="" width="350" height="auto">
+      <div class="col-md-4 " style="padding-left: -140px;margin-top: 74px;">
+      <img src="./image/img-6.png" class="img-rounded" alt="" width="505" height="321px">
       </div>
-    <div class="col-md-2"></div>
+    <!-- <div class="col-md-2"></div> -->
 
   </div>
 </div>
@@ -155,8 +171,7 @@
 
   <div class="row">
     <div class="col-md-3"></div>
-    <div class="text-center col-md-6" style="border:2px black solid;background-color: black;
-    color: white;padding: 20px;margin-top: -20px;margin-bottom: 20px;">
+    <div class="text-center col-md-6 box" >
         <h1>Let's Work Together</h1>
         <em> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</em>
         <h2>805-625-5269</h2>
@@ -169,15 +184,6 @@
 
 </div> <!-- Container End -->
 <footer id="sticky-footer" class="py-2 pt-3 bg-dark text-white">
-  <!-- <div class="container text-center">
-    <small>Copyright &copy; Your Website</small>
-  </div> -->
-  <!-- <p>
-    <span class="text-left" style="font-size: 25px;padding:25px;">RAW</span>
-    <span class="text-center" style="font-size: 25px;padding:25px;">RAW</span>
-    <span class="text-right" style="font-size: 25px;padding:25px;">RAW</span>
-  
-  </p> -->
   <div class="container">
     <div class="row">
 
@@ -206,46 +212,6 @@
     </div>
   </div>
 
-</footer>
-
-
-  <!-- <footer class="pt-4 my-md-5 pt-md-5 border-top"> Footer Start -->
-    <!-- <div class="row">
-      <div class="col-12 col-md">
-        <img class="mb-2" src="https://getbootstrap.com/docs/4.4/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
-        <small class="d-block mb-3 text-muted">&copy; 2017-2019</small>
-      </div> -->
-      <!-- <div class="col-6 col-md">
-        <h5>Features</h5>
-        <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Cool stuff</a></li>
-          <li><a class="text-muted" href="#">Random feature</a></li>
-          <li><a class="text-muted" href="#">Team feature</a></li>
-          <li><a class="text-muted" href="#">Stuff for developers</a></li>
-          <li><a class="text-muted" href="#">Another one</a></li>
-          <li><a class="text-muted" href="#">Last time</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-md">
-        <h5>Resources</h5>
-        <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Resource</a></li>
-          <li><a class="text-muted" href="#">Resource name</a></li>
-          <li><a class="text-muted" href="#">Another resource</a></li>
-          <li><a class="text-muted" href="#">Final resource</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-md">
-        <h5>About</h5>
-        <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Team</a></li>
-          <li><a class="text-muted" href="#">Locations</a></li>
-          <li><a class="text-muted" href="#">Privacy</a></li>
-          <li><a class="text-muted" href="#">Terms</a></li>
-        </ul>
-      </div> -->
-    <!-- </div>
-  </footer> Footer End -->
-
+ </footer> <!--Footer end -->
 </body>
 </html>
