--- a/index.html
+++ b/index.html
@@ -20,41 +20,26 @@
   </head>
   <body>
 
-	<!-- <header>
-	
- <div class="navbar navbar-dark bg-dark shadow-sm">
-    <div class="container d-flex justify-content-between">
-      <a href="#" class="navbar-brand d-flex align-items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="mr-2" viewBox="0 0 24 24" focusable="false"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
-        <strong>Album</strong>
-      </a>
-       <a class="p-2 text-dark" href="#">Features</a>
-	    <a class="p-2 text-dark" href="#">Enterprise</a>
-	    <a class="p-2 text-dark" href="#">Support</a>
-	    <a class="p-2 text-dark" href="#">Pricing</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </div>
-  </div>
-</header> -->
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-light">
-  <a class="navbar-brand" href="#">Navbar w/ text</a>
+  <a class="navbar-brand" href="#">RAW</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav ml-auto  ">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Service</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="#">Work</a>
       </li>
+      <li class="nav-item ">
+          <a class="nav-link navtext" href="#" style="text-transform: uppercase;">Work</a>
+        </li>
     </ul>
     <!-- <span class="navbar-text">
       Navbar text with an inline element
@@ -95,9 +80,9 @@
     </div>
   </div>
   </div>
-  <div class="container " style="padding-top:40px ;"> <!-- Container Start -->
+  <!-- <div class="container " style="padding-top:40px ;"> Container Start
     <div class="row text-center">
-      <!-- <div class="col-md-2"></div> -->
+      <div class="col-md-2"></div>
         
       <div class="col-md-5 " style="margin-right: 5px;">
         <img src="./image/about.png" class="img-rounded" alt="" width="350" height="auto">
@@ -106,10 +91,10 @@
         <div class="col-md-5 " style="padding-left: 5px;margin-top: 20px;">
         <img src="./image/about.png" class="img-rounded" alt="" width="350" height="auto">
         </div>
-      <!-- <div class="col-md-2"></div> -->
+      <div class="col-md-2"></div>
   
     </div>
-  </div>
+  </div> -->
   <div class="container"> <!-- Container start -->
     <div class="row">
     <div class=" col-md-6 abt-img" > 
@@ -123,7 +108,9 @@
   </div>  <!-- Container End -->
 
 <div class="container" style="padding-top:40px ;">
-  	<div class="row">
+    <h1 class="worktext" >Our Work</h1>  
+  <div class="row">
+     
       <div class="col-md-4">
   		<div class="card" style="width: 381px;height: 412;margin: 15px;">
 		  <img class="card-img-top" src="./image/video-1.png" alt="Card image cap">
